# 2024-Sproutopia

./: Dockerfile  README.md  Sproutopia.sln  log2json.cmd  log2json.sh  run.cmd  run.sh
Diff2Full/: Diff2Full.csproj  Program.cs
Domain/: Domain.csproj
DomainTests/: DomainTests.csproj  UnitTest1.cs
DummyBot/: DummyBot.csproj  Program.cs
Logger/: IStreamingFileLogger.cs  Logger.csproj  StreamingFileLogger.cs
LoggerTests/: LoggerTests.csproj
Runner/: Runner.csproj  RunnerCommands.cs  RunnerHub.cs  VisualiserCommands.cs  VisualiserHub.cs
RunnerTests/: RunnerTests.csproj
SproutReferenceBot/: SproutReferenceBot.sln
Sproutopia/: EngineWorker.cs  GAMERULES.md  Program.cs  README.md  Sproutopia.csproj  SproutopiaEngine.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json
SproutopiaTests/: GameStateDtoTests.cs  GameStateTests.cs  GardenManagerTests.cs  GardenTests.cs  SproutopiaTests.csproj  TickManagerTests.cs  UnitTest1.cs  UtilitiesTests.cs  WeedTests.cs  appsettings.Test.json
StarterBots/CPPBot/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  main.cpp  run.sh  setup.sh
StarterBots/CPPBot/enums/: BotAction.h  CellType.h  ObjectType.h
StarterBots/CPPBot/model/: BotCommand.h  BotState.h
StarterBots/CPPBot/service/: BotService.cpp  BotService.h
StarterBots/rustbot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
StarterBots/rustbot/src/: botstate.rs  command.rs  main.rs
Visualiser/: Button.cs  ButtonStateManager.cs  Game1.cs  OneShotMouseButton.cs  Program.cs  RunnerClient.cs  (+2 more)
(+119 files in other folders)
