[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
signalrs-client = { version = "0.1.1" }
anyhow = { version = "1.0.86" }
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
signalrs-derive = "0.1.0"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
